--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
 
         <activity android:name=".forum.ForumActivity" android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".forum.SubForumActivity" android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".forum.PostListActivity" android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
